--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,13 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-button expand="full" (click)="setUser()">Set User ID</ion-button>
+  <ion-button expand="full" (click)="setProperty()">Set User Property</ion-button>
+  <ion-button expand="full" (click)="logEvent()">Log Event</ion-button>
+  <ion-button expand="full" routerLink="/second">Go to second page</ion-button>
+  <ion-button expand="full" (click)="toggleDataCollection()">Toggle Data collection</ion-button>
+
+  Analytics enabled: {{ enabled }}
+
 </ion-content>
